force-app/main/default/objects/Success_Milestone__c/Success_Milestone__c.object-meta.xml
<CustomObject>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track Geekwise Student Milestones</description>
    <label>Student Milestone</label>
    <nameField>
        <displayFormat>SM-{0000}</displayFormat>
        <label>Success Milestone #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>