force-app/main/default/objects/Success_Milestone__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track student&apos;s success milestones
Populated: Auto from Process</description>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Success Milestones</relationshipLabel>
    <relationshipName>Success_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>