force-app/main/default/objects/Success_Milestone__c/fields/Student_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Student_Milestone_Date__c</fullName>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track where Geekwise Supplies are checked out to.
Populated: Manually</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Student Milestone Date</label>
    <type>Date</type>
</CustomField>