force-app/main/default/objects/Success_Milestone__c/fields/Student_Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Student_Milestone_Type__c</fullName>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: Track what kind of success milestone is being logged
Populated: Auto from process</description>
    <label>Student Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered for a Class</fullName>
            </value>
            <value>
                <fullName>Completed a Class</fullName>
            </value>
            <value>
                <fullName>Cohort Candidate</fullName>
            </value>
            <value>
                <fullName>Hired (Cohort)</fullName>
            </value>
            <value>
                <fullName>Hired (Internal)</fullName>
            </value>
            <value>
                <fullName>Hired (External)</fullName>
            </value>
            <value>
                <fullName>Student Engagement</fullName>
            </value>
            <value>
                <fullName>Class Taught</fullName>
            </value>
            <value>
                <fullName>LinkedIn Connected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>