force-app/main/default/objects/Success_Milestone__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To describe the student success milestone
Populated: Auto from process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Title</label>
    <type>TextArea</type>
</CustomField>