force-app/main/default/objects/Success_Milestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Title__c</columns>
    <columns>Student_Milestone_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>